<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".OrganizerCreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/create_event"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/event_title"
            android:inputType="textCapWords"
            android:padding="12dp" />

        <EditText
            android:id="@+id/edit_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/location"
            android:inputType="textPostalAddress"
            android:padding="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edit_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/start_date"
                android:inputType="date"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edit_start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/start_time"
                android:inputType="time"
                android:padding="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/edit_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/end_date"
                android:inputType="date"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/edit_end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:hint="@string/end_time"
                android:inputType="time"
                android:padding="12dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text_background"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="12dp" />

        <Button
            android:id="@+id/btn_upload_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#E0E0E0"
            android:text="@string/upload_image"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_create_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_purple_light"
            android:text="@string/create_event"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>